# mneme

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  SUPPORT.md  mkdocs.yml  prd.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: cli.md  evaluation.md  examples.md  getting-started.md  index.md
docs/release/: API_COMPATIBILITY.md  RELEASE_CHECKLIST.md  SECURITY_REVIEW.md  V1_READINESS_REPORT.md
docs/rfcs/: RFC-0001-core-types-and-canonical-serialization.md  RFC-0002-encoder-fingerprints-and-summary-keys.md  RFC-0003-index-backends-and-query-semantics.md  RFC-0004-memory-store-persistence-and-retention.md  RFC-0005-training-free-knn-conditioning.md  RFC-0006-trained-memory-adapter.md  RFC-0007-commitments-and-retrieval-receipts.md  RFC-0008-remote-store-protocol-messages.md  RFC-0009-evaluation-and-reproducibility-harness.md  (+4 more)
examples/: README.md  local_corrector.py  remote_shared_store.py
tests/: _cli_runner.py  _entrypoint_runner.py  test_adapter_checkpoint.py  test_adapter_training.py  test_ci_workflow.py  test_cli_arguments.py  test_cli_commands.py  test_cli_runtime.py  test_condition_protocols.py  test_core_canonical.py  test_core_errors.py  test_core_json.py  test_core_types.py  test_cross_attn_adapter.py  test_cross_source_provenance_docs.py  test_docs_site.py  test_encode_protocols.py  test_eval_benchmark.py  test_eval_cross_source.py  test_eval_fixtures.py  test_eval_profile.py  test_eval_receipts.py  test_eval_remote_conformance.py  test_eval_replay.py  test_eval_reports.py  test_examples.py  test_faiss_hnsw_index.py  test_fingerprint_helpers.py  test_flat_index.py  test_in_context_conditioner.py  test_knn_corrector.py  test_knn_corrector_torch.py  test_mean_pool_summarizer.py  test_observability_events.py  test_package_scaffold.py  test_public_api_compatibility.py  test_public_docs.py  test_query_semantics.py  test_receipt_commitment.py  test_release_artifacts.py  (+11 more)
(+79 files in other folders)
