[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mneme"
version = "0.1.0.dev0"
description = "Episodic memory and retrieval for latent world models."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Abdelhamid Bakhta" }]
keywords = [
  "episodic-memory",
  "latent-world-models",
  "retrieval",
  "world-models",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "blake3>=0.4",
  "numpy>=1.26",
]

[project.optional-dependencies]
index = ["faiss-cpu>=1.8"]
ml = ["torch>=2.3"]
receipts = ["cryptography>=42"]
remote = ["uvicorn>=0.30"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
dev = ["build>=1.2", "mypy>=1.10", "pytest>=8.2", "ruff>=0.5"]

[project.urls]
Source = "https://github.com/AbdelStark/mneme"
Issues = "https://github.com/AbdelStark/mneme/issues"
Security = "https://github.com/AbdelStark/mneme/security/advisories"
Changelog = "https://github.com/AbdelStark/mneme/releases"

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/docs",
  "/examples",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/SECURITY.md",
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mneme"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
# NumPy 2.5 stubs use Python 3.12 type-alias syntax; Ruff still targets py311.
python_version = "3.12"
packages = ["mneme"]
strict = true
